[tool.poetry]
name = "spy"
version = "0.1.0"
description = ""
authors = ["dchnkoo <valera.dchn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.22"
aiogram = "^3.15.0"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
alembic = "^1.14.0"
redis = "^5.2.0"
async-lru = "^2.0.4"
aiogtrans = "^1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
